<resources>
    <string name="app_name">Classmates</string>
    <string name="home">首页</string>
    <string name="search">搜索</string>
    <string name="notes">点滴</string>
    <string name="my">我的</string>
    <string name="default_login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="regist">注册</string>
    <string name="passwordAgain">再次输入密码</string>
    <string name="myClassmate">我的同学录</string>
    <string name="gong">共</string>
    <string name="x">x</string>
    <string name="pian">篇</string>
    <string name="addClassmate">添加同学</string>
    <string name="classmateName">姓名:</string>
    <string name="sex">性别:</string>
    <string name="birthday">生日:</string>
    <string name="constellation">星座:</string>
    <string name="phone">电话:</string>
    <string name="qq">QQ:</string>
    <string name="address">通信地址:</string>
    <string name="leaveWord">留言:</string>
    <string name="yourWord">记录:</string>
    <string name="hobby">爱好:</string>
    <string name="blood">血型:</string>
    <string name="tellSomething">同学跟你说的悄悄话是什么呢</string>
    <string name="writeSomething">说说你对他/她的印象吧</string>
    <string name="post">提交</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_catalog">CatalogActivity</string>


</resources>
