<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_navigation_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.sheffy.classmate.NavigationBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <!--首页-->
        <TextView
            android:id="@+id/txv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:drawableTop="@drawable/tab_navigation_home"
            android:text="@string/home"
            android:textSize="10sp"
            android:textAlignment="center"/>

        <!--搜索-->
        <TextView
            android:id="@+id/txv_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:drawableTop="@drawable/tab_navigation_search"
            android:text="@string/search"
            android:textSize="10sp"
            android:textAlignment="center"/>

        <!--添加-->
        <TextView
            android:id="@+id/txv_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/add"
            />

        <!--点滴-->
        <TextView
            android:id="@+id/txv_diandi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:drawableTop="@drawable/tab_navigation_notes"
            android:text="@string/notes"
            android:textSize="10sp"
            android:textAlignment="center"/>

        <!--我的-->
        <TextView
            android:id="@+id/txv_my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:drawableTop="@drawable/tab_navigation_my"
            android:text="@string/my"
            android:textSize="10sp"
            android:textAlignment="center"/>

    </LinearLayout>

</RelativeLayout>
