<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBule"
    tools:context="com.example.sheffy.classmate.AddItemActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_title_add"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorGreen"
        app:theme="@style/AppTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:text="@string/addClassmate"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--姓名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/classmateName"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_classmate_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:maxEms="10"
                    android:maxLines="1"
                    android:theme="@style/EditText"/>

            </LinearLayout>

            <!--性别-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sex"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btnMan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="男"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/btnWoman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="女"/>
                </RadioGroup>


            </LinearLayout>

            <!--生日-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthday"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_classmate_birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:maxEms="10"
                    android:maxLines="1"
                    android:hint="必填"
                    android:textColorHint="@color/hint"
                    android:theme="@style/EditText"/>

            </LinearLayout>

            <!--星座-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/constellation"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_classmate_constellation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:maxEms="10"
                    android:maxLines="1"
                    android:hint="选填"
                    android:textColorHint="@color/hint"
                    android:theme="@style/EditText"/>

            </LinearLayout>

            <!--血型-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blood"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_classmate_blood"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:maxEms="10"
                    android:maxLines="1"
                    android:hint="选填"
                    android:textColorHint="@color/hint"
                    android:theme="@style/EditText"/>

            </LinearLayout>

            <!--手机号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_classmate_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="phone"
                    android:maxEms="10"
                    android:maxLines="1"
                    android:hint="必填 11位"
                    android:autoLink="phone"
                    android:textColorHint="@color/hint"
                    android:theme="@style/EditText"/>

            </LinearLayout>

            <!--QQ-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qq"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_classmate_qq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:maxEms="10"
                    android:maxLines="1"
                    android:hint="必填"
                    android:textColorHint="@color/hint"
                    android:theme="@style/EditText"/>

            </LinearLayout>

            <!--家庭地址-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_classmate_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:maxEms="10"
                    android:maxLines="3"
                    android:hint="选填"
                    android:textColorHint="@color/hint"
                    android:theme="@style/EditText"
                    android:adjustViewBounds="true"/>

            </LinearLayout>

            <!--爱好-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hobby"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_classmate_hobby"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:maxEms="10"
                    android:maxLines="3"
                    android:hint="选填"
                    android:textColorHint="@color/hint"
                    android:theme="@style/EditText"/>

            </LinearLayout>

            <!--留言-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leaveWord"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_classmate_leave_word"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:maxEms="20"
                    android:minLines="5"
                    android:maxLines="10"
                    android:gravity="top"
                    android:hint="@string/tellSomething"
                    android:textColorHint="@color/hint"/>

            </LinearLayout>


            <!--记录-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yourWord"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_your_word"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:maxEms="20"
                    android:minLines="5"
                    android:maxLines="10"
                    android:gravity="top"
                    android:hint="@string/writeSomething"
                    android:textColorHint="@color/hint"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_post_add_classmate"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_shape" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
