<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_show_classmate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/beijing3"
    android:orientation="vertical"
    tools:context="com.example.sheffy.classmate.ShowClassmateActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_title_show_classmate"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorGreen"
        app:theme="@style/AppTheme">

        <TextView
            android:id="@+id/txv_title_show_classmate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:text="@string/myClassmate"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/txv_delete_classmate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/delete_c"/>

            <TextView
                android:id="@+id/txv_change_classmate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/change_c"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="4dp"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classmateName"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constellation"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_constellation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_blood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:autoLink="phone"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qq"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>
                <TextView
                    android:id="@+id/txv_show_classmate_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_hobby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leaveWord"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_leave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:maxLines="20"
                    android:ellipsize="end"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yourWord"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:layout_marginLeft="@dimen/showClassmateLeft"/>

                <TextView
                    android:id="@+id/txv_show_classmate_your"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/show_text"
                    android:maxLines="20"
                    android:ellipsize="end"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
